# wsjcpp-static-analizing-text

./: .gitignore  CMakeLists.txt  README.md  wsjcpp.yml
src/: main.cpp  wsjcpp_static_analizing_text.cpp  wsjcpp_static_analizing_text.h
src.wsjcpp/: CMakeLists.txt
unit-tests.wsjcpp/: CMakeLists.txt
unit-tests.wsjcpp/src/: unit_test_static_analizing_text.cpp
